--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Foodies</title>
    </head>
 <body>    
@@ -17,9 +19,26 @@
         <a href="#"><i class="fas fa-info"></i><span>About</span></a>
         <a href="#"><i class="fas fa-user"></i><span>Profile</span></a>
         <a href="#"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
-
     </div>
-      
+    <div class="wrap">
+        <div class="input-group">
+            <div class="form-outline">
+                <input type="search" id="searchRecipe" class="form-control" />
+                <label class="form-label" for="searchRecipe">Search for recipes</label>
+            </div>
+            <button type="button" class="btn btn-primary" id="searchButton">
+                <i class="fas fa-search"></i>
+            </button>
+            <div class="col">
+                <button type="button" class="btn btn-dark" id="searchFilter">Filters</button>
+            </div>
+        </div>
+        
+    </div>
+    </div>
+
+
+
 
 </body>
 </html>
