--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Signup - Personal Info | Foodies</title>
-    <link href="stylesheet.css" rel="stylesheet">
+    <link href="css/stylesheet.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
