--- a/frontend/food_preferences.html
+++ b/frontend/food_preferences.html
@@ -3,11 +3,11 @@
   <!-- stuff tends to get funky when page size changes -->
   <head>
     <title>Signup - Diet Preference | Foodies</title>
-    <link href="stylesheet.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <img class="logo" src="Logo1.png" alt="logo_dark" style="width: 10%" />
+    <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
     <h1 style="margin-top: 0px">Sign Up</h1>
     <h2 style="margin-top: -31px; letter-spacing: 4px">Dietary Preferences</h2>
     <!-- <div class="container" style="max-width: 300px">
