--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Signup - Personal Info | Foodies</title>
-    <link href="stylesheet.css" rel="stylesheet">
+    <link href="css/stylesheet.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <img class="logo" src="Logo1.png" alt="logo_dark" style="width: 10%" />
+    <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
     <h1 style="margin-top: 0px">Sign Up</h1>
     <div class="container" style="max-width: 300px">
       <form class="example" style="margin: auto">
