--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -3,21 +3,21 @@
   <!-- stuff tends to get funky when page size changes -->
   <head>
     <title>Welcome | Foodies</title>
-    <link href="stylesheet.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <img class="logo" src="Logo1.png" alt="logo_dark" style="width: 10%" />
+    <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
     <h1 style="margin-top: -15px">Welcome!</h1>
     <img
       class="button"
-      src="facebook.PNG"
+      src="images/facebook.PNG"
       alt="Facebook"
       style="margin-top: -15px"
     />
     <img
       class="button"
-      src="google.png"
+      src="images/google.png"
       alt="Google"
       style="margin-top: 10px"
     />
