--- a/frontend/base.html
+++ b/frontend/base.html
@@ -20,25 +20,148 @@
         <a href="#"><i class="fas fa-user"></i><span>Profile</span></a>
         <a href="#"><i class="fas fa-sign-in-alt"></i><span>Sign In</span></a>
     </div>
-    <div class="wrap">
-        <div class="input-group">
-            <div class="form-outline">
-                <input type="search" id="searchRecipe" class="form-control" />
-                <label class="form-label" for="searchRecipe">Search for recipes</label>
+    <div class="search-layer">
+        <div class="row">
+            <div class="col">
+                <div class="input-group">
+                    <div class="form-outline">
+                        <input type="search" id="searchRecipe" class="form-control" />
+                        <label class="form-label" for="searchRecipe">Search for recipes</label>
+                    </div>
+                    <button type="button" class="btn btn-primary" id="searchButton">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
             </div>
-            <button type="button" class="btn btn-primary" id="searchButton">
-                <i class="fas fa-search"></i>
-            </button>
             <div class="col">
                 <button type="button" class="btn btn-dark" id="searchFilter">Filters</button>
             </div>
         </div>
-        
     </div>
+    <div class="row">
+        <section class="toppicks-heading">
+            <h3>Top picks by users.</h3>
+        </section>
     </div>
-
-
-
+    <div class="wrapper">
+        <section id="section1">
+            <a href="#section3" class="arrow__btn left-arrow">‹</a>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <a href="#section2" class="arrow__btn right-arrow">›</a>
+        </section>
+        <section id="section2">
+            <a href="#section1" class="arrow__btn left-arrow">‹</a>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <a href="#section3" class="arrow__btn right-arrow">›</a>
+        </section>
+        <section id="section3">
+            <a href="#section2" class="arrow__btn left-arrow">‹</a>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="#">
+                    <img src="images/burger.jpg" alt="Foodies">
+                    <h1 class="heading">Burger</h1>
+                    <p class="duration">Prep Time: 10 mins</p>
+                </a>
+            </div>  
+            <a href="#section1" class="arrow__btn right-arrow">›</a>
+        </section>
+    </div>
 
 </body>
 </html>
