typo fix- second pwd->confirm pwd

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -44,9 +44,9 @@
         />
         <input
           type="password"
-          placeholder="Password"
-          name="password"
-          id="password"
+          placeholder="Confirm Password"
+          name="confirm_password"
+          id="confirm_password"
           required
           style="margin-top: 15px"
         />
