Minor change to make all h1 class "welcome"

--- a/frontend/food_preferences.html
+++ b/frontend/food_preferences.html
@@ -10,7 +10,7 @@
 
 <body>
   <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
-  <h1 style="margin-top: -70px">Sign Up</h1>
+  <h1 class = "welcome" style="margin-top: -70px">Sign Up</h1>
   <h2 style="margin-top: -31px; letter-spacing: 4px">Dietary Preferences</h2>
 
   <div class="container" style="max-width: 720px; margin-top:-25px">
