--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
-    <h1 style="margin-top: 0px">Sign Up</h1>
+    <h1 class = "welcome" style="margin-top: 0px">Sign Up</h1>
     <div class="container" style="max-width: 300px">
       <form class="example" style="margin: auto">
         <input
