--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
-    <h1 style="margin-top: -15px">Welcome!</h1>
+    <h1 class = "welcome" style="margin-top: -15px">Welcome!</h1>
     <img
       class="button"
       src="images/facebook.PNG"
