added onclick events
Base for login, home and social page is ready. Might have to review sidenav.

--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     
@@ -20,11 +20,11 @@
             <img src="images/sample_profile_image.png" class="profile_image" alt="">
             <h3>John Doe</h3>
         </center>
-        <a href="#" style="background: #19B3D3;"><i class="fas fa-desktop"></i><span>Home</span></a>
+        <a href="homepage.html" style="background: #19B3D3;"><i class="fas fa-desktop"></i><span>Home</span></a>
         <a href="#"><i class="fas fa-utensils"></i><span>My Recipes</span></a>
-        <a href="#"><i class="fas fa-info"></i><span>About</span></a>
+        <a href="recipe_social.html"><i class="fas fa-info"></i><span>Recipes by Users</span></a>
         <a href="#"><i class="fas fa-user"></i><span>Profile</span></a>
-        <a href="#"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
+        <a href="welcome.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
     </div>
     <div class="content-wrapper">
         <section class="section section-search">
