--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -41,7 +41,7 @@
           style="margin-top: 15px"
         />
 
-        <button type="button" onclick="" style="margin-top: 20px">Login</button>
+        <button type="button" onclick="location.href='homepage.html'" style="margin-top: 20px">Login</button>
       </form>
     </div>
     <p style="margin-top: 5px">Not a user yet?</p>
