onclick events added

--- a/frontend/food_preferences.html
+++ b/frontend/food_preferences.html
@@ -61,7 +61,7 @@
         <input type="number" name="Meals" id="meals" style="margin-top:16px" />
         <br>
       </div>
-      <button type="button" onclick="">Submit</button>
+      <button type="button" onclick="location.href='homepage.html'">Submit</button>
 
 
       <!-- <p>Vegan
