--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -51,6 +51,6 @@
           style="margin-top: 15px"
         />
 
-        <button type="button" onclick="" style="margin-top: 20px">Next</button>
+        <button type="button" onclick="location.href='food_preferences.html'" style="margin-top: 20px">Next</button>
   </body>
 </html>
