--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -46,7 +46,7 @@
     </div>
     <p style="margin-top: 5px">Not a user yet?</p>
     <form class="example" style="margin: auto; max-width: 300px">
-      <button type="button" onclick="" style="margin-top: 3px">Sign Up</button>
+      <button type="button" onclick="location.href='signup.html'" style="margin-top: 3px">Sign Up</button>
     </form>
   </body>
 </html>
