--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -2,14 +2,17 @@
 <html>
   <head>
     <title>Signup - Personal Info | Foodies</title>
-    <link href="css/stylesheet.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href = "css/background_image.css" rel ="stylesheet"/>
+    <link href = "css/login_signup_style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
-    <img class="logo" src="images/Logo1.png" alt="logo_dark" style="width: 10%" />
-    <h1 class = "welcome" style="margin-top: 0px">Sign Up</h1>
-    <div class="container" style="max-width: 300px">
-      <form class="example" style="margin: auto">
+  <body style = "padding-top:61px;">
+    <div class="w3-card-4 w3-round-large card-custom" style="margin-top: 40px; padding-top:9px">
+    <h3>Sign Up</h3>
+      <form style="margin: auto">
         <input
           type="text"
           placeholder="E-mail"
@@ -50,7 +53,8 @@
           required
           style="margin-top: 15px"
         />
-
-        <button type="button" onclick="location.href='food_preferences.html'" style="margin-top: 20px">Next</button>
+        <button type="button" class="btn btn-dark button-custom" id="SignupPart1" onclick="location.href='food_preferences.html'" style="margin-top: 15px;">Next</button>
+        </form>
+        </div>
   </body>
 </html>
