changed format to fit moving image folder into css folder

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -16,7 +16,7 @@
 <body style = "background: #ffffff;">    
     <div class="sidebar">
         <center>
-            <img src="images/sample_profile_image.png" class="profile_image" alt="">
+            <img src="css/images/sample_profile_image.png" class="profile_image" alt="">
             <h3>John Doe</h3>
         </center>
         <a href="#"><i class="fas fa-desktop"></i><span>Home</span></a>
@@ -70,22 +70,22 @@
                     <br>
                     <div class="w3-row-padding" style="margin:0 -16px">
                         <div class="w3-third">
-                        <img src="images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
+                        <img src="css/images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
                         </div>
                         <div class="w3-third">
-                        <img src="images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
+                        <img src="css/images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
                         </div>
                         <div class="w3-third">
-                            <img src="images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
+                            <img src="css/images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
                         </div>
                         <div class="w3-third">
-                            <img src="images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
+                            <img src="css/images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
                             </div>
                             <div class="w3-third">
-                            <img src="images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
+                            <img src="css/images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
                             </div>
                             <div class="w3-third">
-                                <img src="images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
+                                <img src="css/images/burger.jpg" style="width:100%" alt="Burger" class="w3-margin-bottom">
                             </div>
                     </div>
                     </div>
