--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -54,7 +54,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -65,7 +65,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -76,7 +76,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -87,7 +87,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -98,7 +98,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -119,7 +119,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -130,7 +130,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -141,7 +141,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -152,7 +152,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -163,7 +163,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -175,7 +175,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -186,7 +186,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -197,7 +197,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
@@ -208,7 +208,7 @@
                 <div class="col s3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/burger.jpg">
+                            <img src="css/images/burger.jpg">
                             <span class="card-title">Burger</span>
                         </div>
                         <div class="card-content">
