update photo names- new location

--- a/frontend/recipe_social.html
+++ b/frontend/recipe_social.html
@@ -39,20 +39,20 @@
                 </div>
             </div>
             <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-                <img src="images/sample_profile_image.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px;border: 1px solid black;">
+                <img src="css/images/sample_profile_image.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px;border: 1px solid black;">
                 <span class="w3-right w3-opacity">1 min</span>
                 <h4>Burger</h4><br>
                 <h7 class="w3-opacity">Recipe by John Doe</h7>
                 <p>Short description of the burger which tells what the burger is and what is it made of. Description actually depends on the user entering the recipe but I am just assuming to fill out this sample description.</p>
                 <div class="w3-row-padding" style="margin:0 -16px">
                     <div class="w3-third">
-                    <img src="images/burger.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
+                    <img src="css/images/burger.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
                     </div>
                     <div class="w3-third">
-                    <img src="images/burger.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
+                    <img src="css/images/burger.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
                     </div>
                     <div class="w3-third">
-                        <img src="images/burger.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
+                        <img src="css/images/burger.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
                     </div>
                 </div>
                 <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom" id="likeButton"><i class="fa fa-thumbs-up"></i>  Like</button> 
@@ -60,7 +60,7 @@
             </div>
             
             <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-                <img src="images/sample_profile_image.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px;border: 1px solid black;">
+                <img src="css/images/sample_profile_image.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px;border: 1px solid black;">
                 <span class="w3-right w3-opacity">1 min</span>
                 <h4>Burger</h4><br>
                 <h7 class="w3-opacity">Recipe by John Doe</h7>
