--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -26,7 +26,7 @@
       <form style="margin: auto">
         <input type="text" placeholder="E-mail" name="email" id="email" required style="margin-top: 22px" />
         <input type="password" placeholder="Password" name="password" id="password" required style="margin-top: 15px" />
-        <button type="button" class="btn btn-dark button-custom" id="Login" onclick="location.href='homepage.html'"
+        <button type="button" class="btn btn-dark button-custom" id="Login" onclick="location.href='index.html'"
           style="margin-top: 12px;">
           Login
         </button>
