--- a/frontend/sidebar.html
+++ b/frontend/sidebar.html
@@ -1,11 +1,22 @@
-<div class="sidebar">
+<div class="sidebar" id="sidebar">
     <center>
         <img src="css/images/sample_profile_image.png" class="profile_image" alt="">
         <h3>John Doe</h3>
     </center>
-    <a href="homepage.html"><i class="fas fa-desktop"></i><span>Home</span></a>
+    <a href="#" id="home"><i class="fas fa-desktop"></i><span>Home</span></a>
     <a href="#"><i class="fas fa-utensils"></i><span>My Recipes</span></a>
     <a href="recipe_social.html"><i class="fas fa-info"></i><span>Recipes by Users</span></a>
     <a href="#"><i class="fas fa-user"></i><span>Profile</span></a>
-    <a href="welcome.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
+    <a href="index.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
 </div>
+<script>
+    $(document).ready(function(){
+
+        let home = document.querySelector('#home');
+        
+        if (window.location.pathname.includes("home") ){
+            home.style.backgroundColor = "#19B3D3";
+        }
+
+    }); 
+</script>
