--- a/frontend/home.html
+++ b/frontend/home.html
@@ -12,6 +12,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="scripts/config.js"></script>
+    <script src="scripts/amazon-cognito-auth.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.905.0.min.js"></script>
+    <script src="scripts/amazon-cognito-identity.min.js"></script>
+    <script src="scripts/userAuthentication.js"></script>
     <title>Foodies</title>
    </head>
 <body>    
