--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -58,7 +58,7 @@
           required
           style="margin-top: 15px; color:white;"
         />
-        <button type="button" class="btn btn-dark button-custom" id="SignupPart1" onclick="registerUser()" style="margin-top: 15px;">Next</button>
+        <button type="button" class="btn btn-dark button-custom" id="SignupPart1" onclick="register()" style="margin-top: 15px;">Sign Up</button>
         </form>
         </div>
   </body>
