--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,10 @@
   <link href="css/buttons.css" rel="stylesheet" />
   <link href="css/background_image.css" rel="stylesheet" />
   <link href="css/login_signup_style.css" rel="stylesheet" />
-  <script src="scripts/config.js"></script> 
-  <script src="scripts/amazon-cognito-auth.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
+  <script src="scripts/aws-cognito-sdk.min.js"></script>
   <script src="scripts/amazon-cognito-identity.min.js"></script>
+  <script src="scripts/config.js"></script> 
   <script src="scripts/userAuthentication.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
