--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href = "css/background_image.css" rel ="stylesheet"/>
     <link href = "css/login_signup_style.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts/amazon-cognito-auth.min.js"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
+    <script src="scripts/aws-cognito-sdk.min.js"></script>
     <script src="scripts/amazon-cognito-identity.min.js"></script>
     <script src="scripts/userAuthentication.js"></script>
     <script src="scripts/config.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body style = "padding-top:61px;">
     <div class="w3-card-4 w3-round-large card-custom" style="margin-top: 40px; padding-top:9px">
