--- a/frontend/recipe.html
+++ b/frontend/recipe.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="lib/apiGatewayCore/simpleHttpClient.js"></script>
     <script type="text/javascript" src="lib/apiGatewayCore/utils.js"></script>
     <script type="text/javascript" src="apigClient.js"></script>
-    <script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="scripts/code.js"></script>
     
     <title>Recipe - Burger | Foodies</title>
    </head>
