--- a/frontend/recipe_social.html
+++ b/frontend/recipe_social.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
+    <script src="scripts/aws-cognito-sdk.min.js"></script>
+    <script src="scripts/amazon-cognito-identity.min.js"></script>  
+    <script src="scripts/config.js"></script>
+    <script src="scripts/userAuthentication.js"></script>
+    <script src="scripts/recipe_social.js"></script>
     <title>Foodies</title>
    </head>
 <body>    
@@ -30,10 +37,38 @@
             <div class="w3-row-padding">
                 <div class="w3-col m12">
                     <div class="w3-card w3-round w3-white">
-                        <div class="w3-container w3-padding">
+                        <div class="w3-container" id="addRecipeBlock">
                             <h6>Have a new recipe? Share it with others.</h6>
-                            <p contenteditable="true" class="w3-border w3-padding w3-opacity">What is your recipe called?</p>
-                            <button type="button" class="w3-button w3-theme" style="color: #2f322f;"><i class="fa fa-pencil"></i>Add ingredients</button> 
+                            <div class="input-field">
+                                <input id="recipeName" placeholder="What is your recipe called?" type="text">
+                            </div>
+                            <div class="popup" id="popup">
+                                <div class="ingredientsOverlay">
+                                    <div class="overlayContent">
+                                        <div class="closeButton" onclick="togglePopup()">&times;</div>
+                                        <h3 id="popupHeader" style="padding:20px;">Header</h3>
+                                        <textarea id="recipeDescription" placeholder="Tell the world more about your recipe and some other tips if you'd like." name="recipeDescription" rows="5" cols="30" style="height: 8rem;"></textarea>
+                                        <div class="row">
+                                            <h5 style="width:20%; padding-top:20px; float:left;">Quantity: </h5>
+                                            <input id="quantity" placeholder="ex: 1 Tbsp, Half cup etc." type="text" style="float:left;">
+                                        </div>
+                                        <div class="row">
+                                            <h5 style="width:20%; padding-top:20px; float:left;">Ingredient: </h5>
+                                            <input id="ingredient" placeholder="ex: Salt, Flour etc." type="text">
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <button type="button" class="btn btn-primary" id="addMore" style="background-color: #2f322f;" onclick="addMore()"><i class="fa fa-pencil"></i>Add</button> 
+                                            <button type="button" class="btn btn-primary" id="uploadImage" style="background-color: #2f322f;" onclick=""><i class="fa fa-pencil"></i>Upload Image</button> 
+                                            <button type="button" class="btn btn-primary" id="confirmPost" style="background-color: #2f322f;" onclick="writeRecipes()"><i class="fa fa-pencil"></i>Post</button> 
+                                        </div>
+                                        <div class="row">
+                                            <h5 id="displayIngredients" style="padding-top:10px;">Final ingredients</h5>
+                                            <ul id="ingredientList"></ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-primary" id="addIngredientsButton" style="background-color: #2f322f;" onclick="togglePopup()"><i class="fa fa-pencil"></i>Add ingredients</button> 
                         </div>
                     </div>
                 </div>
