--- a/frontend/sidebar.html
+++ b/frontend/sidebar.html
@@ -5,7 +5,7 @@
     </center>
     <a href="home.html" id="home"><i class="fas fa-desktop"></i><span>Home</span></a>
     <a href="recipe.html" id="myRecipes"><i class="fas fa-utensils"></i><span>My Recipes</span></a>
-    <a href="recipe_social.html" id="recipeSocial"><i class="fas fa-info"></i><span>Recipes by Users</span></a>
+    <a href="social.html" id="recipeSocial"><i class="fas fa-info"></i><span>Recipes by Users</span></a>
     <a href="#" id="profile"><i class="fas fa-user"></i><span>Profile</span></a>
     <a href="#" id="logoutButton" onclick="userLogout()"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
 </div>
@@ -25,7 +25,7 @@
             myRecipes.style.backgroundColor = "#19B3D3";
         }
 
-        if (window.location.pathname.includes("_social") ){
+        if (window.location.pathname.includes("social") ){
             recipeSocial.style.backgroundColor = "#19B3D3";
         }
 
