--- a/frontend/recipe.html
+++ b/frontend/recipe.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/home.css">
-    <link rel = "stylesheet" href = "css/stylesheet.css">
     <link rel="stylesheet" href = "css/sidebar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -26,7 +25,7 @@
     <script type="text/javascript" src="apigClient.js"></script>
     <script type="text/javascript" src="scripts/code.js"></script>
     
-    <title>Recipe - Burger | Foodies</title>
+    <title>Recipe | Foodies</title>
    </head>
 <body style = "background: #ffffff;">    
   <div id="loader" class="center"></div>
@@ -34,9 +33,9 @@
     <div id="nav-placeholder">
     </div>
     <script>
-    $(function(){
-      $("#nav-placeholder").load("sidebar.html");
-    });
+    // $(function(){
+    //   $("#nav-placeholder").load("sidebar.html");
+    // });
     </script>
     <div class="content-wrapper">
         <section class="section section-search">
@@ -59,26 +58,12 @@
         </section>
     <div style="margin-left: 50px; margin-top: -20px; padding-bottom: 20px;">
         <h3 id="RecipeTitle">Recipe</h3>
-        <!-- <div style="width: 275px; height: 183px">
-            <img src="images/burger.jpg" />
-        </div> -->
         <div style="margin-top: 20px">
             <h4>Ingredients</h4>
             <p id = "Ingredients">Ingredient List</p>
-            <!-- <ul style="margin-left: 20px; list-style: black circle;">
-                <li>Beef</li>
-                <li>Cheese</li>
-                <li>Buns</li>
-                <li>Lettuce</li>
-                <li>Tomato</li>
-            </ul> -->
         </div>
         <div style="margin-top: 20px; max-width: 800px;">
             <h4>Recipe</h4>
-            <!-- <ol style="margin-left: 20px">
-                <li>Cook beef</li>
-                <li>Put everything together</li>
-            </ol> -->
             <p id = "Instructions">Instructions</p>
         </div>
         </div>
