sidebar was commented out

--- a/frontend/recipe.html
+++ b/frontend/recipe.html
@@ -33,9 +33,9 @@
     <div id="nav-placeholder">
     </div>
     <script>
-    // $(function(){
-    //   $("#nav-placeholder").load("sidebar.html");
-    // });
+    $(function(){
+      $("#nav-placeholder").load("sidebar.html");
+    });
     </script>
     <div class="content-wrapper">
         <section class="section section-search">
