--- a/frontend/recipe.html
+++ b/frontend/recipe.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="lib/axios/dist/axios.standalone.js"></script>
     <script type="text/javascript" src="lib/CryptoJS/rollups/hmac-sha256.js"></script>
     <script type="text/javascript" src="lib/CryptoJS/rollups/sha256.js"></script>
@@ -24,7 +24,10 @@
     <script type="text/javascript" src="lib/apiGatewayCore/utils.js"></script>
     <script type="text/javascript" src="apigClient.js"></script>
     <script type="text/javascript" src="scripts/code.js"></script>
-    
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
+    <script src="scripts/aws-cognito-sdk.min.js"></script>
+    <script src="scripts/amazon-cognito-identity.min.js"></script>  
+    <script src="scripts/userAuthentication.js"></script>
     <title>Recipe | Foodies</title>
    </head>
 <body style = "background: #ffffff;">    
@@ -68,9 +71,22 @@
         </div>
         </div>
         <script type="text/javascript">
+          document.onreadystatechange = function() {
+              if (document.readyState !== "complete") {
+                  document.querySelector(
+                    "body").style.visibility = "hidden";
+                  document.querySelector(
+                    "#loader").style.visibility = "visible";
+              } else {
+                  document.querySelector(
+                    "#loader").style.display = "none";
+                  document.querySelector(
+                    "body").style.visibility = "visible";
+              }
+          };
           window.onload = function () { 
               getRecipe();
-          }
+          };          
       </script>
   </body>
 
